// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Column /> render correctly 1`] = `
<div
  class="column"
/>
`;

exports[`<Column /> render correctly 2`] = `
<div
  class="column foo"
/>
`;

exports[`<Column /> render correctly 3`] = `
<div
  class="column foo bar"
/>
`;

exports[`<Column /> render correctly 4`] = `
<div
  class="column bar"
/>
`;

exports[`<Column /> render correctly 5`] = `
<div
  class="column"
  style="overflow:hidden"
/>
`;

exports[`<Column /> render correctly 6`] = `
<div
  class="column foo bar"
  style="padding:2px;margin:14px"
/>
`;

exports[`<Grid /> with multiple columns separated by | renders correctly 1`] = `
<div
  class="wrap custom-wrapper"
>
  <div
    class="column column-2"
  >
    <div>
      foo
    </div>
  </div>
  <div
    class="column column-3"
  >
    <div>
      bar
    </div>
  </div>
  <div
    class="column column-2"
  >
    <div>
      baz
    </div>
  </div>
</div>
`;

exports[`<Grid /> with multiple columns separated by | renders correctly 2`] = `
<div
  class="wrap custom-wrapper"
>
  <div
    class="column column-4"
  >
    <div>
      foo
    </div>
  </div>
  <div
    class="column column-5"
  >
    <div>
      bar
    </div>
  </div>
  <div
    class="column column-6"
  >
    <div>
      baz
    </div>
  </div>
</div>
`;

exports[`<Grid /> with multiple columns separated by | renders correctly 3`] = `
<div
  class="wrap custom-wrapper"
>
  <div
    class="column column-2"
  >
    <div>
      foo
    </div>
  </div>
  <div
    class="column column-2"
  >
    <div>
      bar
    </div>
  </div>
  <div
    class="column column-3"
  >
    <div>
      baz
    </div>
  </div>
</div>
`;

exports[`<Grid /> with only single column renders correctly 1`] = `
<div
  class="wrap foo"
  style="margin:-12px;color:#ffa"
>
  <div
    class="column column-2"
  >
    <div>
      foo
    </div>
  </div>
  <div
    class="column column-2"
  >
    <div>
      bar
    </div>
  </div>
</div>
`;
